fixed ghost overflow in home screen

--- a/homeStyleSheet.css
+++ b/homeStyleSheet.css
@@ -21,6 +21,7 @@
   flex-direction: column;
   justify-content: center;
   text-align: center;
+  overflow: hidden;
 }
 
 .gameCard:hover {
